--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -921,7 +921,21 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-products-original .ui-listview .ui-li > .ui-btn-text{
     height: 240px;
 }
-
+.xui-productsList-page .xui-empty-box{
+    width:50%;
+    margin:20% auto;
+}
+.xui-productsList-page .xui-goShopping-btn{
+    display: block;
+    text-align: center;
+    margin:0 auto;
+    width: 94%;
+    background: #CF0305;
+    color: #fff;
+    height: 45px;
+    line-height: 45px;
+    border-radius:2px;
+}
 /*
  * product_new list页面样式
  */
@@ -4504,6 +4518,13 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
     }
     .xui-shoppingCartPage .xui-productName,.xui-shoppingCartPage .xui-productCustomModel{
         width:115px!important;
+    }
+    
+}
+@media only screen and (min-device-width: 320px) and (max-device-height: 480px){
+    .xui-productsList-page .xui-empty-box{
+        width:50%;
+        margin:10% auto;
     }
 }
  /*iphone6*/
