--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -154,7 +154,7 @@
 
             /* 返回首页链接地址 */
             W.backHomePageUrl = "{{request|get_back_homepage_url:homepage_workspace_info}}";
-
+            localStorage.setItem('homepage_url',W.backHomePageUrl);
             {% if messages %}
             {% for message in messages %}
             W.errorMessage = "{{message}}";
