修改首页红包即将过期的数量

--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_rules.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_rules.html
@@ -24,6 +24,7 @@
                 data-ui-role="advanced-table"
                 data-app="apps/red_envelope"
                 data-resource="red_envelope_rule_list"
+                data-args='{"endDate": "{{endDate}}","status": "{{status}}"}'
                 data-template-id="#red_envelope_rule_list_view"
                 data-enable-paginator="true"
                 data-enable-sort="false"
